# mechanix-gui-1

./: Cargo.toml
apps/settings-app/: Cargo.toml
apps/settings-app/src/: async_handler.rs  components.rs  gui.rs  main.rs
apps/settings-app/src/screens/bluetooth/: bluetooth_screen.rs
apps/settings-app/src/screens/display/: brightness_model.rs
apps/settings-app/src/screens/language/: language_screen.rs
apps/settings-app/src/screens/network/: add_network.rs  network_details.rs  networking.rs
apps/settings-app/src/screens/settings_menu/: component.rs  settings_screen.rs  settings_screen_new.rs
apps/settings-app/src/screens/sound/: sound_model.rs  sound_screen.rs
apps/settings-app/src/screens/wireless/: available_networks.rs  connect_network_enter_code.rs  network_details_screen.rs  network_screen.rs
commons/networkmanager/: Cargo.toml
commons/networkmanager/src/: lib.rs
services/system/server/dbus/src/: main.rs
services/system/server/dbus/src/interfaces/: wireless_interface.rs
src/: main.rs
src/commons/: components.rs
src/resources/: mod.rs  route_configs.rs
src/screens/: mod.rs  settings_screen.rs
src/screens/bluetootth/: bluetooth_screen.rs  mod.rs
src/screens/network/: manage_networks_screen.rs  mod.rs  network_screen.rs
src/server/: mod.rs  network_client.rs
