[package]
name = "settings-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.13.1", features = ["debug", "svg", "image"]}
serde = { version = "1.0", features = ["derive"] }
# tonic = "0.9.2"
# tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1"
zbus = { version = "4.1.2", features = ["tokio"] }

[build-dependencies]
# tonic-build = "0.9.2"   
